# video_content_insights

./: insights.ipynb  pyproject.toml  readme.md
src/: bayesian_uplift.py  half_life.py  popularity_insights.py
