[project]
name = "soul-test-insights"
version = "0.1.0"
description = "Notebook and analysis modules with dependency metadata only"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.5",
  "pymc>=5.10",
  "arviz>=0.17",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
